setup mongodb and server

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=3000
+MONGODB_URI=mongodb+srv://100912566:7aRMmi7BRhefnOdO@cluster0.vcoq3.mongodb.net/comp3133_lab_test1?retryWrites=true&w=majority&appName=Cluster0
